# MediRead

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  WEEKLY_LOG.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/agents/interpreter/: __init__.py  citation_guard.py  joint_analysis.py  medical_advice.py  prompts.py  react_chain.py  risk_grading.py
app/agents/parser/: __init__.py  extractor.py  layout.py  normalizer.py  ocr.py  schemas.py
app/api/: routes_auth.py  routes_health.py  routes_history.py  routes_interpret.py  routes_parse.py  routes_upload.py
app/auth/: __init__.py  bootstrap.py  jwt.py  security.py
app/clients/: __init__.py  milvus.py  redis_client.py
app/core/: db.py  embeddings.py  llm.py  storage.py
app/data/: synonyms.json
app/data/kb/: blood_routine.md  kidney_function_panel.md  lipid_glucose_panel.md  liver_function_panel.md  tumor_markers_panel.md  urinalysis.md
app/data/seed/: sample_indicators.json
app/evaluation/: __init__.py  retrieval_eval.py
app/observability/: __init__.py  logging.py  metrics.py  middleware.py
app/rag/: __init__.py  bm25.py  fusion.py  hybrid_retrieval.py  ingestion.py  reranker.py
app/schemas/: models.py
docs/: DEPLOYMENT.md  HARDWARE.md  architecture.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/: AppHeader.vue  IndicatorTable.vue  InterpretationResult.vue  TrendChart.vue
frontend/src/lib/: risk.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: HistoryView.vue  LoginView.vue  ReportView.vue
scripts/: demo.py  init_kb.py  make_sample_report.py  seed.py  verify-paddle-pins.sh
tests/: test_auth_security.py  test_bm25.py  test_bm25_cache.py  test_citation_guard.py  test_extractor_pipeline.py  test_interpret_e2e_golden.py  test_interpreter_retrieval_live.py  test_joint_analysis.py  test_kb_docs.py  test_layout.py  test_medical_advice.py  test_normalizer.py  test_ocr_parsing.py  test_ocr_smoke.py  test_retrieval_eval.py  test_risk_grading.py  test_routes_auth.py  test_routes_history.py  test_rrf_fusion.py
web-demo/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
web-demo/app/: globals.css  layout.tsx  page.tsx
web-demo/lib/: samples.ts
