[project]
name = "mediread"
version = "0.2.0"
description = "AI 体检报告智能解读平台"
# 上限 cap 在 <3.13 的原因:paddlepaddle 2.x 系列最高 2.6.2 只发布到
# cp38/cp39/cp310/cp311/cp312 wheel,Python 3.13 没有 2.x wheel。
# 要支持 3.13 需要把 paddlepaddle / paddleocr 升到 3.x,届时随 OCR 链路
# 升级一并对齐。
requires-python = ">=3.11,<3.13"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = [
    # 长度类:行长统一由 line-length=110 控制,放过 docstring
    "E501",
    # Pylint 严格度:对单文件 / 业务代码不友好
    "PLR0913",  # too-many-arguments —— FastAPI 路由 / Pydantic 模型常超
    "PLR2004",  # magic-value-comparison —— 阈值常量频繁
    "PLR0915",  # too-many-statements —— Agent 链路单函数难拆短
    "PLR0911",  # too-many-return-statements —— 多分支决策函数自然多 return
    # RUF "ambiguous unicode" 三件套:中文医学术语合法包含 γ / β / α 等希腊字母
    # (γ-谷氨酰转移酶 = GGT 的中文标准名),也合法包含全角逗号 / 中文括号。
    # 这些都不是"误打字母 y / 半角逗号",而是真实业务用语。
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    # B008 在 FastAPI 项目里是误报:`def route(x = Depends(get_x))` 是惯用法。
    "B008",
    # 业务约定:循环依赖处主动使用 lazy import,这是有意为之
    "PLC0415",
]

[tool.pytest.ini_options]
# 默认 deselect `ocr` 标记 —— 那些测试需要真实 paddleocr+paddlepaddle 栈
# (Python 3.11/3.12, ~500MB 权重)。显式开启用 `pytest -m ocr`。
addopts = "-q --tb=short -m 'not ocr'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "ocr: 端到端 OCR 测试，需真实 PaddleOCR 栈；默认不跑，`pytest -m ocr` 显式开启",
]
